[gd_scene load_steps=16 format=3 uid="uid://cbgpjmjrirnnh"]

[ext_resource type="Script" path="res://scenes/Level_03.gd" id="1_jddbs"]
[ext_resource type="TileSet" uid="uid://bir4qfvaulu2x" path="res://scenes/Tileset.tres" id="1_t1bll"]
[ext_resource type="PackedScene" uid="uid://by7gxrbscsjbo" path="res://player/Player.tscn" id="2_jpq6f"]
[ext_resource type="PackedScene" path="res://scenes/Pipe.tscn" id="3_3pv3s"]
[ext_resource type="PackedScene" uid="uid://b4rselb33nm28" path="res://scenes/Rat.tscn" id="4_jjkpy"]
[ext_resource type="PackedScene" uid="uid://b13cq4ve8w3uv" path="res://scenes/Rock.tscn" id="5_ujowu"]
[ext_resource type="PackedScene" uid="uid://iotxy1b60d87" path="res://scenes/MobileControls.tscn" id="6_8ii12"]
[ext_resource type="PackedScene" uid="uid://bsmre1xuai1bx" path="res://scenes/Snake.tscn" id="6_uwidl"]
[ext_resource type="PackedScene" uid="uid://dgcyf347dvqwu" path="res://scenes/Scorpion.tscn" id="8_mtim7"]
[ext_resource type="PackedScene" uid="uid://b02j3hq8rkmft" path="res://scenes/Water.tscn" id="9_dxu5t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wajy"]
size = Vector2(31, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_woakx"]
size = Vector2(25, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3p4v"]
size = Vector2(34, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsq6b"]
size = Vector2(46.5, 3.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdcmr"]
size = Vector2(483, 24)

[node name="Level_03" type="Node2D"]
script = ExtResource("1_jddbs")

[node name="Background" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Background"]
tile_set = ExtResource("1_t1bll")
format = 2

[node name="Player" parent="." instance=ExtResource("2_jpq6f")]
position = Vector2(0, 10)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Foreground" type="Node2D" parent="."]

[node name="Entry Pipe" parent="Foreground" instance=ExtResource("3_3pv3s")]
position = Vector2(0, 41)
rotation = 3.14159
scale = Vector2(2, 2)

[node name="Collision" type="CollisionShape2D" parent="Foreground/Entry Pipe"]
position = Vector2(3.17865e-08, -0.5)
shape = SubResource("RectangleShape2D_0wajy")

[node name="Exit Pipe" parent="Foreground" instance=ExtResource("3_3pv3s")]
position = Vector2(64, -1014)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Exit Pipe"]
position = Vector2(0, -5.75)
shape = SubResource("RectangleShape2D_woakx")

[node name="Enemies" type="Node2D" parent="Foreground"]

[node name="Rat" parent="Foreground/Enemies" instance=ExtResource("4_jjkpy")]
position = Vector2(-85, -34)

[node name="Snake" parent="Foreground/Enemies" instance=ExtResource("6_uwidl")]
position = Vector2(-80, -161)

[node name="Rock" parent="Foreground/Enemies" instance=ExtResource("5_ujowu")]
position = Vector2(-32, -365)

[node name="TriggerBox" type="Area2D" parent="Foreground/Enemies/Rock"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Enemies/Rock/TriggerBox"]
position = Vector2(33, 44.5)
shape = SubResource("RectangleShape2D_m3p4v")
debug_color = Color(0.854902, 0.364706, 0, 0.188235)

[node name="Scorpion" parent="Foreground/Enemies" instance=ExtResource("8_mtim7")]
position = Vector2(13, -417)

[node name="Snake2" parent="Foreground/Enemies" instance=ExtResource("6_uwidl")]
position = Vector2(153, -545)

[node name="Rat2" parent="Foreground/Enemies" instance=ExtResource("4_jjkpy")]
position = Vector2(-64, -545)

[node name="Scorpion2" parent="Foreground/Enemies" instance=ExtResource("8_mtim7")]
position = Vector2(63, -769)

[node name="Rat3" parent="Foreground/Enemies" instance=ExtResource("4_jjkpy")]
position = Vector2(289, -898)

[node name="Rat4" parent="Foreground/Enemies" instance=ExtResource("4_jjkpy")]
position = Vector2(125, -929)

[node name="Rat5" parent="Foreground/Enemies" instance=ExtResource("4_jjkpy")]
position = Vector2(21, -929)

[node name="TileMap" type="TileMap" parent="Foreground"]
tile_set = ExtResource("1_t1bll")
format = 2
layer_0/tile_data = PackedInt32Array(131067, 65536, 0, 131068, 65536, 0, 131069, 65536, 0, 131070, 65536, 0, 131071, 65536, 0, 393210, 131072, 1, 327674, 131072, 1, 262138, 131072, 1, 196602, 131072, 1, 131066, 131072, 1, 65530, 131072, 1, -6, 131072, 1, -65542, 131072, 1, -131078, 131072, 1, -196614, 131072, 1, -262150, 131072, 1, -327686, 131072, 1, -393222, 131072, 1, -393223, 262144, 4, -393224, 262144, 4, -327688, 262144, 4, -327687, 262144, 4, -262151, 262144, 4, -196615, 262144, 4, -131079, 262144, 4, -65543, 262144, 4, -7, 262144, 4, 65529, 262144, 4, 131065, 262144, 4, 196601, 262144, 4, 196600, 262144, 4, 131064, 262144, 4, 65528, 262144, 4, -8, 262144, 4, -65544, 262144, 4, -131080, 262144, 4, -196616, 262144, 4, -262152, 262144, 4, 393208, 262144, 4, 327672, 262144, 4, 262136, 262144, 4, 262137, 262144, 4, 327673, 262144, 4, 393209, 262144, 4, 196603, 262144, 4, 196604, 262144, 4, 196605, 262144, 4, 196606, 262144, 4, 196607, 262144, 4, 393215, 262144, 4, 393214, 262144, 4, 393213, 262144, 4, 393212, 262144, 4, 393211, 262144, 4, 327675, 262144, 4, 262139, 262144, 4, 262140, 262144, 4, 262141, 262144, 4, 262142, 262144, 4, 262143, 262144, 4, 327679, 262144, 4, 327678, 262144, 4, 327677, 262144, 4, 327676, 262144, 4, 458746, 131072, 1, 524282, 131072, 1, 589818, 131072, 1, 458744, 262144, 4, 458745, 262144, 4, 524281, 262144, 4, 589817, 262144, 4, 589816, 262144, 4, 524280, 262144, 4, 458747, 262144, 4, 524283, 262144, 4, 589819, 262144, 4, 458750, 262144, 4, 458749, 262144, 4, 458748, 262144, 4, 524284, 262144, 4, 589820, 262144, 4, 458751, 262144, 4, 524287, 262144, 4, 524286, 262144, 4, 524285, 262144, 4, 589821, 262144, 4, 589822, 262144, 4, 589823, 262144, 4, 65536, 65536, 0, 65537, 65536, 0, 65538, 65536, 0, 65539, 65536, 0, 65540, 0, 1, 131072, 262144, 4, 131073, 262144, 4, 131074, 262144, 4, 131075, 262144, 4, 131076, 0, 1, 196612, 0, 1, 262148, 0, 1, 262147, 262144, 4, 262146, 262144, 4, 262145, 262144, 4, 196609, 262144, 4, 196610, 262144, 4, 196611, 262144, 4, 196608, 262144, 4, 262144, 262144, 4, 327680, 262144, 4, 327681, 262144, 4, 327682, 262144, 4, 327683, 262144, 4, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 524288, 262144, 4, 458753, 262144, 4, 393217, 262144, 4, 393218, 262144, 4, 458755, 262144, 4, 524291, 262144, 4, 524289, 262144, 4, 524290, 262144, 4, 458754, 262144, 4, 393219, 262144, 4, 458752, 262144, 4, 393216, 262144, 4, 4, 0, 1, -65532, 0, 1, -65531, 262144, 4, 5, 262144, 4, 65541, 262144, 4, 131077, 262144, 4, 196613, 262144, 4, 262149, 262144, 4, 327685, 262144, 4, 393221, 262144, 4, 458757, 262144, 4, 524293, 262144, 4, -458758, 131072, 1, -524294, 131072, 1, -589830, 131072, 1, -655366, 131072, 1, -720902, 131072, 1, -458759, 262144, 4, -458760, 262144, 4, -524296, 262144, 4, -589832, 262144, 4, -655368, 262144, 4, -720904, 262144, 4, -720903, 262144, 4, -655367, 262144, 4, -589831, 262144, 4, -524295, 262144, 4, -851974, 131072, 1, -851975, 262144, 4, -851976, 262144, 4, -786440, 262144, 4, -786439, 262144, 4, -786438, 131072, 1, -1966086, 131072, 1, -1966087, 262144, 4, -1966088, 262144, 4, -1900552, 262144, 4, -1835016, 262144, 4, -1769480, 262144, 4, -1703944, 262144, 4, -1638408, 262144, 4, -1572872, 262144, 4, -1507336, 262144, 4, -1441800, 262144, 4, -1376264, 262144, 4, -1310728, 262144, 4, -1245192, 262144, 4, -1179656, 262144, 4, -1114120, 262144, 4, -1048584, 262144, 4, -983048, 262144, 4, -917512, 262144, 4, -917510, 131072, 1, -983046, 131072, 1, -1048582, 131072, 1, -1114118, 131072, 1, -1179654, 131072, 1, -1245190, 131072, 1, -1310726, 131072, 1, -1376262, 131072, 1, -1441798, 131072, 1, -1507334, 131072, 1, -1572870, 131072, 1, -1638406, 131072, 1, -1703942, 131072, 1, -1769478, 131072, 1, -1835014, 131072, 1, -1900550, 131072, 1, -1310727, 262144, 4, -1376263, 262144, 4, -1441799, 262144, 4, -1507335, 262144, 4, -1572871, 262144, 4, -1638407, 262144, 4, -1703943, 262144, 4, -1769479, 262144, 4, -1835015, 262144, 4, -1900551, 262144, 4, -1245191, 262144, 4, -1179655, 262144, 4, -1114119, 262144, 4, -1048583, 262144, 4, -983047, 262144, 4, -917511, 262144, 4, -1966089, 262144, 4, -1966090, 262144, 4, -1966091, 262144, 4, -1966092, 262144, 4, -1900556, 262144, 4, -1835020, 262144, 4, -1769484, 262144, 4, -1703948, 262144, 4, -1638412, 262144, 4, -1572876, 262144, 4, -1507340, 262144, 4, -1441804, 262144, 4, -1376268, 262144, 4, -1310732, 262144, 4, -1245196, 262144, 4, -1179660, 262144, 4, -1114124, 262144, 4, -1048588, 262144, 4, -983052, 262144, 4, -917516, 262144, 4, -851980, 262144, 4, -786444, 262144, 4, -720908, 262144, 4, -655372, 262144, 4, -589836, 262144, 4, -524300, 262144, 4, -458764, 262144, 4, -393228, 262144, 4, -327692, 262144, 4, -262156, 262144, 4, -196620, 262144, 4, -131084, 262144, 4, -65548, 262144, 4, -12, 262144, 4, 65524, 262144, 4, 131060, 262144, 4, 196596, 262144, 4, 262132, 262144, 4, 327668, 262144, 4, 393204, 262144, 4, 458740, 262144, 4, 524276, 262144, 4, 589812, 262144, 4, 589815, 262144, 4, 524279, 262144, 4, 458743, 262144, 4, 393207, 262144, 4, 327671, 262144, 4, 262135, 262144, 4, 196599, 262144, 4, 131063, 262144, 4, 65527, 262144, 4, -9, 262144, 4, -65545, 262144, 4, -131081, 262144, 4, -196617, 262144, 4, -262153, 262144, 4, -327689, 262144, 4, -393225, 262144, 4, -458761, 262144, 4, -524297, 262144, 4, -589833, 262144, 4, -655369, 262144, 4, -720905, 262144, 4, -786441, 262144, 4, -851977, 262144, 4, -917513, 262144, 4, -983049, 262144, 4, -1048585, 262144, 4, -1114121, 262144, 4, -1179657, 262144, 4, -1245193, 262144, 4, -1310729, 262144, 4, -1376265, 262144, 4, -1441801, 262144, 4, -1507337, 262144, 4, -1572873, 262144, 4, -1638409, 262144, 4, -1703945, 262144, 4, -1769481, 262144, 4, -1835017, 262144, 4, -1900553, 262144, 4, -1900554, 262144, 4, -1900555, 262144, 4, -1835019, 262144, 4, -1769483, 262144, 4, -1703947, 262144, 4, -1638411, 262144, 4, -1572875, 262144, 4, -1507339, 262144, 4, -1441803, 262144, 4, -1376267, 262144, 4, -1310731, 262144, 4, -1245195, 262144, 4, -1179659, 262144, 4, -1114123, 262144, 4, -1048587, 262144, 4, -983051, 262144, 4, -917515, 262144, 4, -851979, 262144, 4, -786443, 262144, 4, -720907, 262144, 4, -655371, 262144, 4, -589835, 262144, 4, -524299, 262144, 4, -458763, 262144, 4, -393227, 262144, 4, -327691, 262144, 4, -262155, 262144, 4, -196619, 262144, 4, -131083, 262144, 4, -65547, 262144, 4, -11, 262144, 4, 65525, 262144, 4, 131061, 262144, 4, 196597, 262144, 4, 262133, 262144, 4, 327669, 262144, 4, 393205, 262144, 4, 458741, 262144, 4, 524277, 262144, 4, 589813, 262144, 4, 589814, 262144, 4, 524278, 262144, 4, 458742, 262144, 4, 393206, 262144, 4, 327670, 262144, 4, 262134, 262144, 4, 196598, 262144, 4, 131062, 262144, 4, 65526, 262144, 4, -10, 262144, 4, -65546, 262144, 4, -131082, 262144, 4, -196618, 262144, 4, -262154, 262144, 4, -327690, 262144, 4, -393226, 262144, 4, -458762, 262144, 4, -524298, 262144, 4, -589834, 262144, 4, -655370, 262144, 4, -720906, 262144, 4, -786442, 262144, 4, -851978, 262144, 4, -917514, 262144, 4, -983050, 262144, 4, -1048586, 262144, 4, -1114122, 262144, 4, -1179658, 262144, 4, -1245194, 262144, 4, -1310730, 262144, 4, -1376266, 262144, 4, -1441802, 262144, 4, -1507338, 262144, 4, -1572874, 262144, 4, -1638410, 262144, 4, -1703946, 262144, 4, -1769482, 262144, 4, -1835018, 262144, 4, -131068, 0, 1, -196604, 0, 1, -262140, 0, 1, -327676, 0, 1, -393212, 0, 1, -458748, 0, 1, -524284, 0, 1, -589820, 0, 1, -655356, 0, 1, -720892, 0, 1, -786428, 0, 1, -851964, 0, 1, -917500, 0, 1, -983036, 0, 1, -1048572, 0, 1, -131067, 262144, 4, -196603, 262144, 4, -262139, 262144, 4, -327675, 262144, 4, -393211, 262144, 4, -458747, 262144, 4, -524283, 262144, 4, -589819, 262144, 4, -655355, 262144, 4, -720891, 262144, 4, -786427, 262144, 4, -851963, 262144, 4, -917499, 262144, 4, -983035, 262144, 4, -1048571, 262144, 4, -1114107, 65536, 0, -1114106, 65536, 0, -1114105, 65536, 0, -1114104, 0, 1, -1114103, 262144, 4, -1114102, 0, 1, -1114101, 262144, 4, -1048565, 262144, 4, -983029, 262144, 4, -917493, 262144, 4, -851957, 262144, 4, -786421, 262144, 4, -720885, 262144, 4, -655349, 262144, 4, -589813, 262144, 4, -524277, 262144, 4, -458741, 262144, 4, -393205, 262144, 4, -327669, 262144, 4, -262133, 262144, 4, -196597, 262144, 4, -131061, 262144, 4, -65525, 262144, 4, 11, 262144, 4, 65547, 262144, 4, 131083, 262144, 4, 196619, 262144, 4, 262155, 262144, 4, 327691, 262144, 4, 524299, 262144, 4, 458763, 262144, 4, 393227, 262144, 4, 524294, 262144, 4, 524295, 262144, 4, 524296, 0, 1, 524297, 262144, 4, 524298, 0, 1, -393209, 262144, 4, -458745, 262144, 4, -524281, 262144, 4, -589817, 262144, 4, -655353, 262144, 4, -720889, 262144, 4, -786425, 262144, 4, -851961, 262144, 4, -917497, 262144, 4, -983033, 262144, 4, -1048569, 262144, 4, -1048570, 262144, 4, -983034, 262144, 4, -917498, 262144, 4, -851962, 262144, 4, -786426, 262144, 4, -720890, 262144, 4, -655354, 262144, 4, -589818, 262144, 4, -524282, 262144, 4, -458746, 262144, 4, -393210, 262144, 4, -327674, 262144, 4, -262138, 262144, 4, -196602, 262144, 4, -131066, 262144, 4, -65530, 262144, 4, 6, 262144, 4, 65542, 262144, 4, 131078, 262144, 4, 196614, 262144, 4, 262150, 262144, 4, 327686, 262144, 4, 393222, 262144, 4, 458758, 262144, 4, 458759, 262144, 4, 393223, 262144, 4, 327687, 262144, 4, 262151, 262144, 4, 196615, 262144, 4, 131079, 262144, 4, 65543, 262144, 4, 7, 262144, 4, -65529, 262144, 4, -131065, 262144, 4, -196601, 262144, 4, -262137, 262144, 4, -327673, 262144, 4, -327672, 0, 1, -393208, 0, 1, -458744, 0, 1, -524280, 0, 1, -589816, 0, 1, -655352, 0, 1, -720888, 0, 1, -786424, 0, 1, -851960, 0, 1, -917496, 0, 1, -983032, 0, 1, -1048568, 0, 1, -1048567, 262144, 4, -983031, 262144, 4, -917495, 262144, 4, -851959, 262144, 4, -786423, 262144, 4, -720887, 262144, 4, -655351, 262144, 4, -589815, 262144, 4, -524279, 262144, 4, -458743, 262144, 4, -393207, 262144, 4, -327671, 262144, 4, -262135, 262144, 4, -262136, 0, 1, -196600, 0, 1, -131064, 0, 1, -65528, 0, 1, 8, 0, 1, 65544, 0, 1, 196616, 0, 1, 262152, 0, 1, 327688, 0, 1, 393224, 0, 1, 458760, 0, 1, 458761, 262144, 4, 393225, 262144, 4, 327689, 262144, 4, 262153, 262144, 4, 196617, 262144, 4, 131081, 262144, 4, 65545, 262144, 4, 9, 262144, 4, -65527, 262144, 4, -131063, 262144, 4, -196599, 262144, 4, -196598, 0, 1, -262134, 0, 1, -327670, 0, 1, -393206, 0, 1, -458742, 0, 1, -524278, 0, 1, -589814, 0, 1, -655350, 0, 1, -720886, 0, 1, -786422, 0, 1, -851958, 0, 1, -917494, 0, 1, -983030, 0, 1, -1048566, 0, 1, -131062, 0, 1, -65526, 0, 1, 10, 0, 1, 65546, 0, 1, 131082, 0, 1, 196618, 0, 1, 262154, 0, 1, 327690, 0, 1, 393226, 0, 1, 458762, 0, 1, -5, 0, 3, -4, 65536, 3, -3, 131072, 3, -131077, 196608, 3, -262147, 0, 3, -262146, 65536, 3, -262145, 65536, 3, -327680, 131072, 3, -458750, 0, 3, -458749, 65536, 0, -393213, 0, 2, -458753, 131072, 3, -458754, 65536, 3, -458755, 0, 3, -655358, 0, 3, -655357, 65536, 3, -786437, 65536, 3, -786436, 65536, 3, -786435, 65536, 3, -786434, 65536, 3, -786433, 65536, 3, -786429, 0, 3, -983037, 0, 3, -1048577, 65536, 3, -1048578, 65536, 3, -1048579, 0, 3, -851968, 131072, 3, -1114108, 0, 0, -1179640, 0, 1, -1245176, 0, 1, -1310712, 0, 1, -1376248, 0, 1, -1441784, 0, 1, 131080, 0, 1, -1179639, 262144, 4, -1179638, 0, 1, -1179637, 262144, 4, -1245173, 262144, 4, -1310709, 262144, 4, -1376245, 262144, 4, -1441781, 262144, 4, -1507317, 262144, 4, -1572853, 262144, 4, -1638389, 262144, 4, -1703925, 262144, 4, -1769461, 262144, 4, -1834997, 262144, 4, -1834998, 0, 1, -1834999, 65536, 0, -1769463, 262144, 4, -1703927, 262144, 4, -1638391, 262144, 4, -1572855, 262144, 4, -1507319, 262144, 4, -1441783, 262144, 4, -1376247, 262144, 4, -1310711, 262144, 4, -1245175, 262144, 4, -1310710, 0, 1, -1376246, 0, 1, -1441782, 0, 1, -1507318, 0, 1, -1572854, 0, 1, -1638390, 0, 1, -1703926, 0, 1, -1769462, 0, 1, -1245174, 0, 1, -1834996, 262144, 4, -1769460, 262144, 4, -1703924, 262144, 4, -1638388, 262144, 4, -1572852, 262144, 4, -1507316, 262144, 4, -1441780, 262144, 4, -1376244, 262144, 4, -1310708, 262144, 4, -1245172, 262144, 4, -1179636, 262144, 4, -1179635, 262144, 4, -1245171, 262144, 4, -1310707, 262144, 4, -1376243, 262144, 4, -1441779, 262144, 4, -1507315, 262144, 4, -1572851, 262144, 4, -1638387, 262144, 4, -1703923, 262144, 4, -1769459, 262144, 4, -1834995, 262144, 4, -1834994, 262144, 4, -1834993, 262144, 4, -1769457, 262144, 4, -1703921, 262144, 4, -1638385, 262144, 4, -1572849, 262144, 4, -1507313, 262144, 4, -1507314, 262144, 4, -1441778, 262144, 4, -1376242, 262144, 4, -1310706, 262144, 4, -1245170, 262144, 4, -1245169, 262144, 4, -1179633, 262144, 4, -1179634, 262144, 4, -1310705, 262144, 4, -1376241, 262144, 4, -1441777, 262144, 4, -1638386, 262144, 4, -1703922, 262144, 4, -1769458, 262144, 4, -1572850, 262144, 4, -1114097, 262144, 4, -1048561, 262144, 4, -983025, 262144, 4, -917489, 262144, 4, -851953, 262144, 4, -786417, 262144, 4, -720881, 262144, 4, -655345, 262144, 4, -589809, 262144, 4, -589810, 262144, 4, -589811, 262144, 4, -589812, 262144, 4, -655348, 262144, 4, -720884, 262144, 4, -786420, 262144, 4, -851956, 262144, 4, -917492, 262144, 4, -983028, 262144, 4, -1048564, 262144, 4, -1114100, 262144, 4, -1114099, 262144, 4, -1114098, 262144, 4, -1048562, 262144, 4, -983026, 262144, 4, -917490, 262144, 4, -851954, 262144, 4, -786418, 262144, 4, -720882, 262144, 4, -655346, 262144, 4, -655347, 262144, 4, -786419, 262144, 4, -851955, 262144, 4, -1048563, 262144, 4, -983027, 262144, 4, -917491, 262144, 4, -720883, 262144, 4, -524273, 262144, 4, -458737, 262144, 4, -393201, 262144, 4, -327665, 262144, 4, -262129, 262144, 4, -196593, 262144, 4, -131057, 262144, 4, -65521, 262144, 4, 15, 262144, 4, 65551, 262144, 4, 131087, 262144, 4, 196623, 262144, 4, 262159, 262144, 4, 327695, 262144, 4, 393231, 262144, 4, 458767, 262144, 4, 524303, 262144, 4, 524302, 262144, 4, 524301, 262144, 4, 524300, 262144, 4, -65523, 262144, 4, -131059, 262144, 4, -196595, 262144, 4, -262131, 262144, 4, -327667, 262144, 4, -393203, 262144, 4, -458739, 262144, 4, -524275, 262144, 4, -524276, 262144, 4, -458740, 262144, 4, -393204, 262144, 4, -327668, 262144, 4, -262132, 262144, 4, -196596, 262144, 4, -131060, 262144, 4, -65524, 262144, 4, 12, 262144, 4, 65548, 262144, 4, 131084, 262144, 4, 196620, 262144, 4, 262156, 262144, 4, 327692, 262144, 4, 393228, 262144, 4, 458764, 262144, 4, 458765, 262144, 4, 393229, 262144, 4, 327693, 262144, 4, 262157, 262144, 4, 196621, 262144, 4, 131085, 262144, 4, 65549, 262144, 4, 13, 262144, 4, 14, 262144, 4, -65522, 262144, 4, -131058, 262144, 4, -196594, 262144, 4, -262130, 262144, 4, -327666, 262144, 4, -393202, 262144, 4, -458738, 262144, 4, -524274, 262144, 4, 65550, 262144, 4, 131086, 262144, 4, 196622, 262144, 4, 262158, 262144, 4, 327694, 262144, 4, 393230, 262144, 4, 458766, 262144, 4, -1507320, 0, 1, -1572856, 0, 1, -1638392, 0, 1, -1703928, 0, 1, -1769464, 0, 1, -1835000, 0, 0, -1114112, 131072, 3, -1179651, 196608, 3, -1310720, 196608, 3, -1376259, 196608, 3, -1507329, 0, 3, -1572864, 65536, 3, -1572863, 65536, 3, -1572862, 65536, 3, -1572861, 65536, 3, -1572860, 65536, 3, -1572859, 131072, 3, -1900540, 131072, 3, -1900541, 65536, 3, -1900542, 65536, 3, -1900543, 65536, 3, -1900544, 65536, 3, -1835009, 0, 3, -1703929, 0, 3, -1900534, 0, 1, -1966070, 0, 1, -2031606, 0, 1, -2097142, 0, 1, -2162678, 0, 1, -2228214, 0, 1, -2293750, 0, 1, -2293749, 262144, 4, -2293748, 262144, 4, -2293747, 262144, 4, -2293746, 262144, 4, -2293745, 262144, 4, -2228209, 262144, 4, -2162673, 262144, 4, -2097137, 262144, 4, -2031601, 262144, 4, -1966065, 262144, 4, -1900529, 262144, 4, -2162675, 262144, 4, -2228211, 262144, 4, -2228212, 262144, 4, -2228213, 262144, 4, -2162677, 262144, 4, -2097141, 262144, 4, -2031605, 262144, 4, -1966069, 262144, 4, -1900533, 262144, 4, -1900532, 262144, 4, -1966068, 262144, 4, -2031604, 262144, 4, -2097140, 262144, 4, -2162676, 262144, 4, -2097139, 262144, 4, -2031603, 262144, 4, -1966067, 262144, 4, -1900531, 262144, 4, -1900530, 262144, 4, -1966066, 262144, 4, -2031602, 262144, 4, -2097138, 262144, 4, -2162674, 262144, 4, -2228210, 262144, 4, -2162679, 65536, 2, -2162680, 65536, 2, -2162681, 65536, 2, -2162682, 65536, 2, -2162683, 65536, 2, -2162684, 65536, 2, -2162685, 65536, 2, -2162686, 65536, 2, -2162687, 65536, 2, -2162688, 65536, 2, -2097153, 65536, 2, -2097154, 65536, 2, -2097155, 65536, 2, -2097156, 65536, 2, -2097157, 65536, 2, -2097158, 131072, 1, -2031622, 131072, 1, -2162694, 131072, 1, -2228230, 131072, 1, -2293766, 131072, 1, -2359302, 131072, 1, -2424838, 131072, 1, -2490374, 131072, 1, -2555910, 131072, 1, -2359286, 0, 1, -2424822, 0, 1, -2490358, 0, 1, -2555894, 0, 1, -2621430, 0, 1, -2359281, 262144, 4, -2424817, 262144, 4, -2490353, 262144, 4, -2555889, 262144, 4, -2621425, 262144, 4, -2621429, 262144, 4, -2621428, 262144, 4, -2621427, 262144, 4, -2621426, 262144, 4, -2621431, 262144, 4, -2621432, 262144, 4, -2621433, 262144, 4, -2621434, 262144, 4, -2621435, 262144, 4, -2621436, 262144, 4, -2621437, 262144, 4, -2621438, 262144, 4, -2621439, 262144, 4, -2621440, 262144, 4, -2555905, 262144, 4, -2555906, 262144, 4, -2555907, 262144, 4, -2555908, 262144, 4, -2555909, 262144, 4, -2031628, 262144, 4, -2097164, 262144, 4, -2162700, 262144, 4, -2228236, 262144, 4, -2293772, 262144, 4, -2359308, 262144, 4, -2424844, 262144, 4, -2490380, 262144, 4, -2555916, 262144, 4, -2555915, 262144, 4, -2555914, 262144, 4, -2555913, 262144, 4, -2555912, 262144, 4, -2555911, 262144, 4, -2228233, 262144, 4, -2293769, 262144, 4, -2359305, 262144, 4, -2424841, 262144, 4, -2490377, 262144, 4, -2490378, 262144, 4, -2490379, 262144, 4, -2424843, 262144, 4, -2359307, 262144, 4, -2293771, 262144, 4, -2228235, 262144, 4, -2162699, 262144, 4, -2097163, 262144, 4, -2031627, 262144, 4, -2031626, 262144, 4, -2097162, 262144, 4, -2162698, 262144, 4, -2228234, 262144, 4, -2293770, 262144, 4, -2359306, 262144, 4, -2424842, 262144, 4, -2162697, 262144, 4, -2097161, 262144, 4, -2031625, 262144, 4, -2031624, 262144, 4, -2097160, 262144, 4, -2162696, 262144, 4, -2228232, 262144, 4, -2293768, 262144, 4, -2359304, 262144, 4, -2424840, 262144, 4, -2490376, 262144, 4, -2490375, 262144, 4, -2424839, 262144, 4, -2359303, 262144, 4, -2293767, 262144, 4, -2228231, 262144, 4, -2162695, 262144, 4, -2097159, 262144, 4, -2031623, 262144, 4, -2424832, 262144, 4, -2490368, 262144, 4, -2555904, 262144, 4, -2490369, 262144, 4, -2490370, 262144, 4, -2490371, 262144, 4, -2490372, 262144, 4, -2490373, 262144, 4, -2424837, 262144, 4, -2359301, 262144, 4, -2293765, 262144, 4, -2228229, 262144, 4, -2162693, 262144, 4, -2162692, 262144, 4, -2228228, 262144, 4, -2293764, 262144, 4, -2359300, 262144, 4, -2424836, 262144, 4, -2424835, 262144, 4, -2359299, 262144, 4, -2293763, 262144, 4, -2228227, 262144, 4, -2162691, 262144, 4, -2162690, 262144, 4, -2228226, 262144, 4, -2293762, 262144, 4, -2359298, 262144, 4, -2424834, 262144, 4, -2424833, 262144, 4, -2359297, 262144, 4, -2293761, 262144, 4, -2228225, 262144, 4, -2162689, 262144, 4, -2228224, 262144, 4, -2293760, 262144, 4, -2359296, 262144, 4, -2359295, 262144, 4, -2424831, 262144, 4, -2490367, 262144, 4, -2555903, 262144, 4, -2555902, 262144, 4, -2490366, 262144, 4, -2424830, 262144, 4, -2359294, 262144, 4, -2293758, 262144, 4, -2293759, 262144, 4, -2228223, 262144, 4, -2228222, 262144, 4, -2228221, 262144, 4, -2293757, 262144, 4, -2359293, 262144, 4, -2424829, 262144, 4, -2490365, 262144, 4, -2555901, 262144, 4, -2555900, 262144, 4, -2490364, 262144, 4, -2424828, 262144, 4, -2359292, 262144, 4, -2293756, 262144, 4, -2228220, 262144, 4, -2228219, 262144, 4, -2293755, 262144, 4, -2359291, 262144, 4, -2424827, 262144, 4, -2490363, 262144, 4, -2555899, 262144, 4, -2555898, 262144, 4, -2490362, 262144, 4, -2424826, 262144, 4, -2359290, 262144, 4, -2293754, 262144, 4, -2228218, 262144, 4, -2228217, 262144, 4, -2293753, 262144, 4, -2359289, 262144, 4, -2424825, 262144, 4, -2490361, 262144, 4, -2555897, 262144, 4, -2555896, 262144, 4, -2490360, 262144, 4, -2424824, 262144, 4, -2359288, 262144, 4, -2293752, 262144, 4, -2228216, 262144, 4, -2228215, 262144, 4, -2293751, 262144, 4, -2359287, 262144, 4, -2424823, 262144, 4, -2490359, 262144, 4, -2555895, 262144, 4, -2424819, 262144, 4, -2490355, 262144, 4, -2555891, 262144, 4, -2555892, 262144, 4, -2555893, 262144, 4, -2490357, 262144, 4, -2424821, 262144, 4, -2359285, 262144, 4, -2359284, 262144, 4, -2424820, 262144, 4, -2490356, 262144, 4, -2359283, 262144, 4, -2359282, 262144, 4, -2424818, 262144, 4, -2490354, 262144, 4, -2555890, 262144, 4)

[node name="NextArea" type="Area2D" parent="Foreground"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/NextArea"]
position = Vector2(63.75, -1014.75)
shape = SubResource("RectangleShape2D_fsq6b")
debug_color = Color(0.854902, 0.364706, 0, 0.188235)

[node name="Water" parent="Foreground" instance=ExtResource("9_dxu5t")]
offset_left = -161.0
offset_top = 62.0
offset_right = 321.0
offset_bottom = 286.0

[node name="WaterTimer" type="Timer" parent="Foreground"]
wait_time = 0.1
autostart = true

[node name="DeathZoneLevel3" type="Area2D" parent="Foreground"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/DeathZoneLevel3"]
position = Vector2(81, 103)
shape = SubResource("RectangleShape2D_hdcmr")
debug_color = Color(0.854902, 0.0705882, 0, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 10)
offset = Vector2(100, 0)
zoom = Vector2(3, 3)

[node name="MobileControls" parent="Camera2D" instance=ExtResource("6_8ii12")]
offset_left = -224.0
offset_top = 131.0
offset_right = -224.0
offset_bottom = 131.0
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Foreground/Enemies/Rock/TriggerBox" to="Foreground/Enemies/Rock" method="_on_trigger_box_body_entered"]
[connection signal="body_entered" from="Foreground/NextArea" to="." method="_on_next_area_body_entered"]
[connection signal="timeout" from="Foreground/WaterTimer" to="." method="_on_water_timer_timeout"]
[connection signal="body_entered" from="Foreground/DeathZoneLevel3" to="Player" method="_on_death_zone_level_3_body_entered"]
